--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.2.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-calendar": "^4.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
